--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     <div class="links">
                         <li class="title">school</li>
                         <li><a href="https://gmail.com">gmail</a></li>
-                        <li><a href="https://outlook.office.com">outlook</a></li>
-                        <li><a href="https://quizlet.com/">quizlet</a></li>
+                        <li><a href="https://maps.google.com">maps</a></li>
                         <li><a href="https://onedrive.live.com">onedrive</a></li>
                     </div>
                 </div>
@@ -36,17 +35,16 @@
                     <div class="links">
                         <li class="title">dev</li>
                         <li><a href="https://github.com/">github</a></li>
-                        <li><a href="https://www.netlify.com/">netlify</a></li>
                         <li><a href="https://tryhackme.com/login">tryhackme</a></li>
                         <li><a href="https://www.overleaf.com/project">overleaf</a></li>
+                        <li><a href="https://doka.guide/">doka.guide</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
                         <li class="title">ent</li>
-                        <li><a href="https://lichess.org/">lichess</a></li>
-                        <li><a href="https://netflix.com">netflix</a></li>
+                        <li><a href="https://hd.kinopoisk.ru/">kinopoisk</a></li>
                         <li><a href="https://www.soap2day.ac/">movies</a></li>
                         <li><a href="https://www.goodreads.com/">goodreads</a></li>
                     </div>
@@ -55,10 +53,9 @@
                 <div class="category">
                     <div class="links">
                         <li class="title">misc</li>
-                        <li><a href="https://tempmail.email/">tempmail</a></li>
                         <li><a href="https://monkeytype.com/">monkeytype</a></li>
                         <li><a href="https://excalidraw.com/">excalidraw</a></li>
-                        <li><a href="https://latin-translator.com/">translator</a></li>
+                        <li><a href="https://deepl.com/">deepl</a></li>
                     </div>
                 </div>
             </div>
