--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
 
         <div class="right-container">
             <div class="head">
-                <p><span id="time"></span></span></p>
+                <p><span id="time"></span></p>
+                <div class="search-container">
+                    <input type="text" id="search-input" placeholder="Search..." autocomplete="off">
+                    <button id="search-button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="11" cy="11" r="8"></circle>
+                            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                        </svg>
+                    </button>
+                </div>
             </div>
 
             <div class="bookmarks">
