--- a/index.html
+++ b/index.html
@@ -19,14 +19,27 @@
         <div class="right-container">
             <div class="head">
                 <p><span id="time"></span></p>
-                <div class="search-container">
-                    <input type="text" id="search-input" placeholder="Search..." autocomplete="off">
-                    <button id="search-button">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <div class="search-container" role="search">
+                    <input 
+                        type="text" 
+                        id="search-input" 
+                        placeholder="Search..." 
+                        autocomplete="off"
+                        aria-label="Search the web"
+                        aria-describedby="search-description"
+                    >
+                    <button 
+                        id="search-button"
+                        aria-label="Submit search"
+                    >
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
                             <circle cx="11" cy="11" r="8"></circle>
                             <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
                         </svg>
                     </button>
+                    <span id="search-description" class="visually-hidden">
+                        Press Enter or click the search button to search using Google
+                    </span>
                 </div>
             </div>
 
